[gd_scene load_steps=4 format=3 uid="uid://dixe43c8v5eku"]

[ext_resource type="Script" path="res://main.gd" id="1_4m6vn"]
[ext_resource type="PackedScene" uid="uid://bqe1n8j6y1kct" path="res://kira_karton.tscn" id="2_bdshh"]
[ext_resource type="PackedScene" uid="uid://cs6uyiqu4q57x" path="res://guess_ui.tscn" id="4_7p14f"]

[node name="GameMaster" type="Node2D"]
script = ExtResource("1_4m6vn")

[node name="KiraKarton" parent="." instance=ExtResource("2_bdshh")]

[node name="GuessUI" parent="." instance=ExtResource("4_7p14f")]
unique_name_in_owner = true

[connection signal="guess_correct" from="." to="GuessUI" method="_on_game_master_guess_correct"]
[connection signal="target_reached" from="." to="GuessUI" method="_on_game_master_target_reached"]
[connection signal="guess_button_pressed" from="GuessUI" to="." method="_on_guess_ui_guess_button_pressed"]
[connection signal="guess_text_focus_changed" from="GuessUI" to="." method="_on_guess_ui_guess_text_focus_changed"]
